-Added some more boilerplate, implemented jquery.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <title>JQuery Sketch App</title>
-    <link rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </head>
 
   <body>
+    <div class="container">
+      <div class="grid">
+        <div class="box">
+        </div>
+      </div><!--.grid-->
+    </div><!--.container-->
   </body>
 </html>
