Added bootstrap and some basic styles

--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html>
   <head>
     <title>JQuery Sketch App</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"
     <script type="text/javascript" src="js/script.js"></script>
   </head>
 
   <body>
     <div class="container">
-      <div class="grid">
-        <div class="box">
-        </div>
+      <div id="header">
+        <h1>Grid Game</h1>
+        <button id ="start" class="start">Build Grid</button>
+      </div><!--.header-->
+      <div id = 'grid'>
+        <!--This is where the grid will be inserted by jquery-->
       </div><!--.grid-->
     </div><!--.container-->
   </body>
