Simplified some CSS styles and added some Bootstrap styles:

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div id="header">
-        <h1>Grid Game</h1>
-        <button id ="start" class="start">Build Grid</button>
+        <h1 class="page-header">Etch-a-Sketch</h1>
+        <button id ="start" class="start btn btn-primary">Build Grid</button>
       </div><!--.header-->
       <div id = 'grid'>
         <!--This is where the grid will be inserted by jquery-->
       </div><!--.grid-->
-    </div><!--.container-->
+    </div><!--.container-fluid-->
   </body>
 </html>
